x11proto-core (7.0.16-2) UNRELEASED; urgency=low

  * Get rid of the x-dev transitional package.

 -- Julien Cristau <jcristau@debian.org>  Sat, 21 Nov 2009 10:34:47 +0100

x11proto-core (7.0.16-1) unstable; urgency=low

  [ Julien Cristau ]
  * Make build-dep on xutils-dev versioned (closes: #521230).  Lenny's version
    is too old.  Thanks, Alexander Wuerstlein!

  [ Timo Aaltonen ]
  * New upstream release 7.0.16.
  * Drop Conflicts/Replaces on x-dev and Pre-Depends on x11-common.  This
    was needed for upgrades from sarge.
  * Bump Standards-Version to 3.8.3.

 -- Julien Cristau <jcristau@debian.org>  Fri, 20 Nov 2009 19:18:21 +0100

x11proto-core (7.0.15-1) unstable; urgency=low

  * New upstream release.

 -- Julien Cristau <jcristau@debian.org>  Fri, 13 Mar 2009 11:06:28 +0100

x11proto-core (7.0.14-2) unstable; urgency=low

  * Run autoreconf on build.  Add build-deps on automake and xutils-dev.
  * Upload to unstable.

 -- Julien Cristau <jcristau@debian.org>  Sun, 15 Feb 2009 20:47:37 +0100

x11proto-core (7.0.14-1) experimental; urgency=low

  * debian/control: x-dev is in Section: libdevel, not x11.
  * New upstream version.

 -- Julien Cristau <jcristau@debian.org>  Fri, 07 Nov 2008 21:15:15 +0100

x11proto-core (7.0.12-1) unstable; urgency=low

  * New upstream release.
  * debian/control updates:
    + bump Standards-Version to 3.7.3 (no changes)
    + drop the XS- prefix from the Vcs fields

 -- Julien Cristau <jcristau@debian.org>  Fri, 07 Mar 2008 13:55:18 +0100

x11proto-core (7.0.11-1) unstable; urgency=low

  [ Brice Goglin ]
  * Update the long description.
  * Add URL in debian/copyright.
  * Add XS-Vcs-* to debian/control.
  * Remove Fabio from Uploaders, with his permission.

  [ Julien Cristau ]
  * New upstream release.
  * Add myself to Uploaders, and remove Branden with his permission.

 -- Julien Cristau <jcristau@debian.org>  Tue, 18 Sep 2007 00:02:16 +0200

x11proto-core (7.0.10-2) unstable; urgency=low

  * Upload to unstable.
