@@ -1,6 +1,8 @@
 x11proto-core (7.0.16-2) UNRELEASED; urgency=low
 
   * Get rid of the x-dev transitional package.
+  * Rename the build directory to not include DEB_BUILD_GNU_TYPE for no
+    good reason.  Thanks, Colin Watson!
 
  -- Julien Cristau <jcristau@debian.org>  Sat, 21 Nov 2009 10:34:47 +0100
 
